--- a/app/src/main/res/menu/fragment_photo_gallery.xml
+++ b/app/src/main/res/menu/fragment_photo_gallery.xml
@@ -8,6 +8,12 @@
     <item android:id="@+id/menu_item_clear"
         android:title="@string/clear_search"
         app:showAsAction="never" />
+    <item android:id="@+id/menu_item_showdb"
+        android:title="@string/show_db"
+        app:showAsAction="never" />
+    <item android:id="@+id/menu_item_cleardb"
+        android:title="@string/clear_db"
+        app:showAsAction="never" />
     <item android:id="@+id/menu_item_toggle_polling"
         android:title="@string/start_polling"
         app:showAsAction="ifRoom|withText"/>
